--- a/app/src/main/res/layout/item_anchor_home.xml
+++ b/app/src/main/res/layout/item_anchor_home.xml
@@ -12,7 +12,8 @@
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints" />
 
     <TextView
         android:id="@+id/tv_is_live_mark"
@@ -55,14 +56,6 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
-            android:id="@+id/iv_pk"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="5dp"
-            android:src="@drawable/ic_home_pk"
-            android:visibility="gone" />
-
-        <ImageView
             android:id="@+id/iv_week_star"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -76,6 +69,15 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="5dp"
             android:src="@drawable/ic_home_popularity"
+            android:visibility="gone" />
+
+        <ImageView
+            android:id="@+id/iv_pk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:src="@drawable/ic_home_pk"
+            android:layout_gravity="center_horizontal"
             android:visibility="gone" />
     </LinearLayout>
 
