--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.whzl.mengbi.ui.widget.view.LeftRelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/lrl_live"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -700,7 +700,7 @@
             android:visibility="gone"
             app:autoPlay="true" />
 
-    </com.whzl.mengbi.ui.widget.view.LeftRelativeLayout>
+    </RelativeLayout>
 
     <include
         android:id="@+id/draw_layout_include_live"
