--- a/app/src/main/res/layout/item_parent_chip.xml
+++ b/app/src/main/res/layout/item_parent_chip.xml
@@ -53,7 +53,8 @@
                 android:id="@+id/rv_chip_list"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"/>
+                android:layout_marginTop="16dp"
+                android:overScrollMode="never"/>
 
         </LinearLayout>
 
