--- a/app/src/main/res/layout/fragment_red_bag.xml
+++ b/app/src/main/res/layout/fragment_red_bag.xml
@@ -37,7 +37,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="end"
-                android:hint="2000"
+                android:hint="0"
                 android:inputType="number"
                 android:maxLength="8"
                 android:paddingBottom="12dp"
@@ -45,6 +45,7 @@
                 android:paddingRight="6.5dp"
                 android:paddingTop="12dp"
                 android:textColor="#323232"
+                android:textColorHint="#d9d9d9"
                 android:textSize="14.5sp" />
 
             <TextView
@@ -81,7 +82,7 @@
                 android:layout_weight="1"
                 android:background="@null"
                 android:gravity="end"
-                android:hint="5"
+                android:hint="填写个数"
                 android:inputType="number"
                 android:maxLength="8"
                 android:paddingBottom="12dp"
@@ -89,6 +90,7 @@
                 android:paddingRight="6.5dp"
                 android:paddingTop="12dp"
                 android:textColor="#323232"
+                android:textColorHint="#d9d9d9"
                 android:textSize="14.5sp" />
 
             <TextView
