--- a/app/src/main/res/layout/item_my_chip.xml
+++ b/app/src/main/res/layout/item_my_chip.xml
@@ -73,6 +73,8 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
-        android:background="@color/tran_black7"/>
+        android:background="@color/tran_black7"
+        android:layout_marginLeft="12dp"
+        android:layout_marginRight="12dp"/>
 
 </LinearLayout>
