--- a/app/src/main/res/layout/activity_search_record.xml
+++ b/app/src/main/res/layout/activity_search_record.xml
@@ -59,10 +59,12 @@
             android:textSize="17sp" />
     </LinearLayout>
 
-    <ScrollView
+    <com.whzl.mengbi.ui.widget.view.BounceScrollView
         android:id="@+id/scroll_search"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:overScrollMode="never"
+        android:scrollbars="none">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -138,6 +140,7 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginTop="18dp"
                     android:descendantFocusability="blocksDescendants">
 
                     <android.support.v7.widget.RecyclerView
@@ -149,7 +152,7 @@
 
             </LinearLayout>
         </LinearLayout>
-    </ScrollView>
+    </com.whzl.mengbi.ui.widget.view.BounceScrollView>
 
     <!-- 搜索结果 -->
     <LinearLayout
