--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -609,7 +609,7 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv_redpack"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
                         android:layout_height="37dp"
                         android:layout_marginTop="12dp"
                         android:overScrollMode="never" />
