--- a/app/src/main/res/layout/item_redpack_live.xml
+++ b/app/src/main/res/layout/item_redpack_live.xml
@@ -1,26 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/rl_red_bag"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="36dp"
     android:layout_height="37dp"
-    android:clickable="false"
-    android:orientation="vertical">
+    android:orientation="horizontal">
 
-    <ImageView
-        android:id="@+id/iv_state"
+    <View
+        android:layout_width="7dp"
+        android:layout_height="match_parent" />
+
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/rl_red_bag"
         android:layout_width="29dp"
         android:layout_height="37dp"
-        android:layout_alignParentRight="true"
         android:clickable="false"
-        android:src="@drawable/ic_red_pack_off_live" />
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_time"
-        android:layout_width="29dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:gravity="center"
-        android:textColor="#fddd2b"
-        android:textSize="8.5sp" />
-</RelativeLayout>
+        <ImageView
+            android:id="@+id/iv_state"
+            android:layout_width="29dp"
+            android:layout_height="37dp"
+            android:layout_alignParentRight="true"
+            android:clickable="false"
+            android:scaleType="fitXY"
+            android:src="@drawable/ic_red_pack_off_live" />
+
+        <TextView
+            android:id="@+id/tv_time"
+            android:layout_width="29dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:textColor="#fddd2b"
+            android:textSize="8.5sp" />
+    </RelativeLayout>
+</LinearLayout>
