--- a/app/src/main/res/layout/item_redpack_live.xml
+++ b/app/src/main/res/layout/item_redpack_live.xml
@@ -26,12 +26,24 @@
 
         <TextView
             android:id="@+id/tv_time"
-            android:layout_width="29dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="4.5dp"
+            android:text="0"
             android:textColor="#fddd2b"
             android:textSize="8.5sp" />
+
+        <TextView
+            android:id="@+id/tv_second"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="5dp"
+            android:layout_toRightOf="@id/tv_time"
+            android:text="s"
+            android:textColor="#fddd2b"
+            android:textSize="6.5sp" />
     </RelativeLayout>
 </LinearLayout>
