--- a/app/src/main/res/layout/activity_play_notify.xml
+++ b/app/src/main/res/layout/activity_play_notify.xml
@@ -8,6 +8,11 @@
 
     <include layout="@layout/comm_white_toolbar" />
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/view_space"
+        android:background="@drawable/view_space" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
