--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -562,16 +562,6 @@
                     <!--android:layout_marginRight="7dp"-->
                     <!--android:layout_marginTop="9dp"-->
                     <!--android:background="@null" />-->
-                    <com.youth.banner.Banner
-                        android:id="@+id/banner"
-                        android:layout_width="60dp"
-                        android:layout_height="60dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginRight="7dp"
-                        android:layout_marginTop="9dp">
-
-
-                    </com.youth.banner.Banner>
 
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -594,11 +584,19 @@
                         <LinearLayout
                             android:id="@+id/ll_pager_index"
                             android:layout_width="100dp"
-                            android:layout_height="wrap_content"
+                            android:layout_height="5dp"
                             android:layout_marginTop="5dp"
                             android:gravity="center"
                             android:orientation="horizontal" />
                     </LinearLayout>
+
+                    <com.youth.banner.Banner
+                        android:id="@+id/banner"
+                        android:layout_width="60dp"
+                        android:layout_height="60dp"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="9dp"
+                        android:layout_marginTop="7dp"></com.youth.banner.Banner>
 
                     <View
                         android:layout_width="match_parent"
@@ -608,7 +606,7 @@
 
                     <android.support.v7.widget.RecyclerView
                         android:id="@+id/rv_redpack"
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="37dp"
                         android:layout_marginTop="12dp"
                         android:overScrollMode="never" />
