--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -596,7 +596,7 @@
                         android:layout_height="60dp"
                         android:layout_alignParentRight="true"
                         android:layout_marginRight="9dp"
-                        android:layout_marginTop="7dp"></com.youth.banner.Banner>
+                        android:layout_marginTop="7dp"/>
 
                     <View
                         android:layout_width="match_parent"
